# Software1FinalProject

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: FindGurobi.cmake
src/: CMakeLists.txt  Makefile  backtrack.c  backtrack.h  board.c  board.h  bool.h  checked_alloc.c  checked_alloc.h  dummy.c  dummy.h  game.h  history.c  history.h  list.c  list.h  lp.c  lp.h  main.c  mainaux.c  mainaux.h  parser.c  parser.h
tests/: CMakeLists.txt  test_backtrack.c  test_board.c  test_dummy.c  test_history.c  test_list.c  test_lp.c  test_parser.c
